--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eject": "react-scripts eject",
     "build:ui": "npm run build --prod",
     "deploy": "git push heroku master",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",    
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
     "logs:prod": "heroku logs --tail"    
   },
   "eslintConfig": {
